fix(addon-editor): vertical alignment of content in a list

--- a/projects/addon-editor/components/editor-socket/styles/list.less
+++ b/projects/addon-editor/components/editor-socket/styles/list.less
@@ -21,6 +21,15 @@ ul li > p {
     display: inline-block;
 }
 
+li:before {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0;
+    text-align: start;
+    text-align-last: start;
+}
+
 ul > li:before {
     content: '';
     display: inline-block;
